# DepthCameraSandbox

./: .clang-format  .gitignore  CMakeLists.txt
apps/: frameRecorder3D.cpp  parcelLocator.cpp
include/: CameraInterface.h  DepthCamera.h  DummyCamera.h  Frame3D.h  ParcelLocator.h  ParcelLocatorAlgo.h  findSquares.h  helper.h
src/: findSquares.cpp  helper.cpp
tests/: CMakeLists.txt  sampleTest.cpp
